# crystallography

./: .gitignore  README.md  REPORT.md  pyproject.toml
configs/: default.yaml  hard.yaml  small_test.yaml
scripts/: generate_data.py  run_comparison.py  run_full_real_test.py  run_real_data.py  train_vit.py
src/classical/: hit_finder.py  peakfinder8.py
src/evaluation/: compare.py  metrics.py  visualize.py
src/vit/: model.py  train.py
